--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -38,94 +38,30 @@
                     <!-- Grey navigation panel -->
                     <div class="row">
                         <div class="col s12 m12">
-                            <div class="card blue-grey darken-2">
+                            <div class="card blue-grey darken-2" ng-controller="TransactionsTable">
                                 <div class="card-content white-text">
                                     <span class="card-title">Account Transactions</span>
                                     <table class="highlight stripped">
                                         <thead>
                                             <tr>
-                                                <th data-field="id">Name</th>
-                                                <th data-field="name">Item Name</th>
-                                                <th data-field="price">Amount</th>
+                                                <th data-field="timestammp">Date</th>
+                                                <th data-field="transactionType">Type</th>
+                                                <th data-field="transactionAmount">Amount</th>
+                                                <th data-field="posBalance">Balance</th>
                                             </tr>
                                         </thead>
-
                                         <tbody>
-                                            <tr>
-                                                <td>Alvin</td>
-                                                <td>Eclair</td>
-                                                <td>$0.87</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alan</td>
-                                                <td>Jellybean</td>
-                                                <td>$3.76</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alvin</td>
-                                                <td>Eclair</td>
-                                                <td>$0.87</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alan</td>
-                                                <td>Jellybean</td>
-                                                <td>$3.76</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alvin</td>
-                                                <td>Eclair</td>
-                                                <td>$0.87</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alan</td>
-                                                <td>Jellybean</td>
-                                                <td>$3.76</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alvin</td>
-                                                <td>Eclair</td>
-                                                <td>$0.87</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Alan</td>
-                                                <td>Jellybean</td>
-                                                <td>$3.76</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
-                                            </tr>
-                                            <tr>
-                                                <td>Jonathan</td>
-                                                <td>Lollipop</td>
-                                                <td>$7.00</td>
+                                            <tr ng-repeat="transaction in transactionList">
+                                                <td>{{ transaction.timeStamp | date : format : timezone}}</td>
+                                                <td>{{ transaction.transactionType }}</td>
+                                                <td>{{ transaction.transactionAmount }}</td>
+                                                <td>{{ transaction.posBalance }}</td>
                                             </tr>
                                         </tbody>
                                     </table>
                                 </div>
                                 <div class="card-action">
-                                    <a href="#">Action Link</a>
+                                    <a ng-click="loadData()" href="">Refresh</a>
                                 </div>
                             </div>
                         </div>
@@ -157,11 +93,11 @@
                             <div class="card">
                                 <div class="card-content">
                                     <span class="card-title grey-text text-darken-4">Transfer</span>
-                                    
+
                                     <div ng-controller="TransferForm">
                                         <!-- PlaceHolder for Messages -->
-                                        <div id="messages" ng-show="message">{{ message }}</div>
-                                        
+                                        <div id="messages" ng-show="message">{{ message}}</div>
+
                                         <form ng-submit="processForm()">
                                             <!-- Destination Account -->
                                             <div id="name-group" class="form-group">
