--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,20 +3,23 @@
 
     <head>
         <!-- Import AngularJS-->
-        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
         <script src="js/angular-input-masks-standalone.min.js"></script>
         <script src="js/app.js"></script>
+        
         <!--Import Google Icon Font-->
-        <link href="http://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+        <link href="//fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet"/>
         <!--Import materialize.css-->
-        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"  media="screen,projection"/>
-        <!--Let browser know website is optimized for mobile-->
+        <link type="text/css" rel="stylesheet" href="css/materialize.min.css"/>
+        <!--Import custom CSS-->
+        <link type="text/css" rel="stylesheet" href="css/app.css"/>
         <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     </head>
 
     <body>
         <!--Import jQuery before materialize.js-->
-        <script type="text/javascript" src="https://code.jquery.com/jquery-2.1.1.min.js"></script>
+        <script type="text/javascript" src="//code.jquery.com/jquery-2.1.1.min.js"></script>
         <script type="text/javascript" src="js/materialize.min.js"></script>
 
         <div class="light-blue lighten-4">
@@ -24,125 +27,17 @@
             <!-- Navbar goes here -->
             <nav>
                 <div class="nav-wrapper light-blue darken-3 z-depth-3">
-                    <a href="#" class="brand-logo">LOGO</a>
+                    <a href="#" class="brand-logo"></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="#">My Account</a></li>
-                        <li><a href="#">About</a></li>
                     </ul>
                 </div>
             </nav>
             <!-- Page Layout here -->
-            <div class="row">
 
-                <div class="col s6">
-                    <!-- Grey navigation panel -->
-                    <div class="row">
-                        <div class="col s12 m12">
-                            <div class="card blue-grey darken-2" ng-controller="TransactionsTable">
-                                <div class="card-content white-text">
-                                    <span class="card-title">Account Transactions</span>
-                                    <table class="highlight stripped">
-                                        <thead>
-                                            <tr>
-                                                <th data-field="timestammp">Date</th>
-                                                <th data-field="transactionType">Type</th>
-                                                <th data-field="transactionAmount">Amount</th>
-                                                <th data-field="posBalance">Balance</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <tr ng-repeat="transaction in transactionList">
-                                                <td>{{ transaction.timeStamp | date : format : timezone}}</td>
-                                                <td>{{ transaction.transactionType }}</td>
-                                                <td>{{ transaction.transactionAmount }}</td>
-                                                <td>{{ transaction.posBalance }}</td>
-                                            </tr>
-                                        </tbody>
-                                    </table>
-                                </div>
-                                <div class="card-action">
-                                    <a ng-click="loadData()" href="">Refresh</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+            <div ng-view></div>
 
-                <div class="col s6">
-                    <!-- Teal page content  -->
-                    <div class="row">
-                        <div class="col s12 m7">
-                            <div class="card">
-                                <div class="card-image" ng-controller="Test">
-                                    <img src="images/sample-1.jpg">
-                                    <span class="card-title">Welcome {{userDetails.Name}}</span>
-                                    <span class="card-content">{{currentDate.now() | date:'medium'}}</span>
-                                </div>
-                                <div class="card-content" ng-controller="Balance">
-                                    <h6><p>Current Balance: {{accountDetails.balance}}</p></h6>
-                                </div>
-                                <div class="card-action">
-                                    <a href="#">Account Details</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="row">
-                        <div class="col s12 m7">
-                            <div class="card">
-                                <div class="card-content">
-                                    <span class="card-title grey-text text-darken-4">Transfer</span>
-
-                                    <div ng-controller="TransferForm">
-                                        <!-- PlaceHolder for Messages -->
-                                        <div id="messages" ng-show="message">{{ message}}</div>
-
-                                        <form ng-submit="processForm()">
-                                            <!-- Destination Account -->
-                                            <div id="name-group" class="form-group">
-                                                <label>Destination Account</label>
-                                                <input type="text" name="transferDestAccount" class="form-control" placeholder="Insert destination account ID here..." ng-model="formTransferData.destAccountId">
-                                                <span class="help-block"></span>
-                                            </div>
-
-                                            <!-- Description -->
-                                            <div id="superhero-group" class="form-group">
-                                                <label>Amount</label>
-                                                <input type="text" name="transferValue" class="form-control" placeholder="Insert value here..." ng-model="formTransferData.amount" ui-money-mask>
-                                                <span class="help-block"></span>
-                                            </div>
-
-                                            <!-- Transfer Button -->
-                                            <button type="submit" class="btn btn-success btn-lg btn-block">
-                                                <span class="glyphicon glyphicon-flash"></span> Transfer
-                                            </button>
-                                        </form>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col s12 m7">
-                            <div class="card">
-                                <div class="card-content">
-                                    <span class="card-title activator grey-text text-darken-4">Widthraw<i class="material-icons right">more_vert</i></span>
-                                    <p>To perform actions on your account use the links below</p>
-                                </div>
-                                <div class="card-action">
-                                    <a href="#">Widthraw</a>
-                                </div>
-                                <div class="card-reveal">
-                                    <span class="card-title grey-text text-darken-4">Execute a widthraw<i class="material-icons right">close</i></span>
-                                    <p>Here is some more information about this product that is only revealed once clicked on.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-
+            <!-- /Page Layout here -->
             <footer class="page-footer light-blue darken-3">
                 <div class="footer-copyright">
                     <div class="container">© 2016 Copyright Text</div>
