--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -3,8 +3,10 @@
 
     <head>
         <!-- Import AngularJS-->
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.3/angular.min.js"></script>
-        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.7/angular-route.min.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-route.js"></script>
+        <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.5.7/angular-cookies.js"></script>
+
         <script src="js/angular-input-masks-standalone.min.js"></script>
         <script src="js/app.js"></script>
         
@@ -29,7 +31,7 @@
                 <div class="nav-wrapper light-blue darken-3 z-depth-3">
                     <a href="#" class="brand-logo"></a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
-                        <li><a href="#">My Account</a></li>
+                        <li><a href="#/logout">Logout</a></li>
                     </ul>
                 </div>
             </nav>
