--- a/src/main/webapp/pages/login.html
+++ b/src/main/webapp/pages/login.html
@@ -9,7 +9,7 @@
         <div class="container">
             <div class="z-depth-1 grey lighten-4 row" style="width: 50%; display: inline-block; padding: 32px 48px 0px 48px; border: 1px solid #EEE;">
 
-                <form class="col s12" ng-submit="processForm()" ng-controller="LoginForm">
+                <form class="col s12" ng-submit="login()">
                     <div class="row">
                         <div class="col s12">
                         </div>
