--- a/src/main/webapp/pages/main.html
+++ b/src/main/webapp/pages/main.html
@@ -3,7 +3,7 @@
         <!-- Grey navigation panel -->
         <div class="row">
             <div class="col s12 m12">
-                <div class="card blue-grey darken-2" ng-controller="TransactionsTable">
+                <div class="card blue-grey darken-2" >
                     <div class="card-content white-text">
                         <span class="card-title">Account Transactions</span>
                         <table class="highlight stripped">
@@ -12,7 +12,8 @@
                                     <th data-field="timestammp">Date</th>
                                     <th data-field="transactionType">Type</th>
                                     <th data-field="transactionAmount">Amount</th>
-                                    <th data-field="posBalance">Balance</th>
+                                    <th data-field="preBalance">Current Balance</th>
+                                    <th data-field="posBalance">Available Balance</th>
                                 </tr>
                             </thead>
                             <tbody>
@@ -20,13 +21,14 @@
                                     <td>{{ transaction.timeStamp | date : format : timezone}}</td>
                                     <td>{{ transaction.transactionType}}</td>
                                     <td>{{ transaction.transactionAmount}}</td>
+                                    <td>{{ transaction.preBalance}}</td>
                                     <td>{{ transaction.posBalance}}</td>
                                 </tr>
                             </tbody>
                         </table>
                     </div>
                     <div class="card-action">
-                        <a ng-click="loadData()" href="">Refresh</a>
+                        <a ng-click="getBalance.loadData()" href="">Refresh</a>
                     </div>
                 </div>
             </div>
@@ -37,14 +39,14 @@
         <!-- Teal page content  -->
         <div class="row">
             <div class="col s12 m7">
-                <div class="card"  ng-controller="Login">
+                <div class="card" >
                     <div class="card-image" >
                         <img src="images/sample-1.jpg">
                         <span class="card-title">Welcome {{userDetails.firstName}} {{userDetails.lastName}}</span>
                     </div>
-                    <div class="card-content" ng-controller="Balance">
+                    <div class="card-content">
                         <h6><p>Account ID: {{userDetails.accountId}}</p></h6>
-                        <h6><p>Current Balance: {{accountDetails.balance}}</p></h6>
+                        <h6><p>Current Balance: €{{accountDetails.balance}} </p></h6>
                         <span class="card-content">{{currentDate.now() | date:'M dd y'}}</span>
                     </div>
                     <div class="card-action">
