Fix select dropwdown class style

--- a/src/main/webapp/pages/main.html
+++ b/src/main/webapp/pages/main.html
@@ -70,7 +70,7 @@
                                 <!-- Selection of operation to execute -->
                                 <div class="form-group">
                                     <label>Select Action</label>
-                                    <select ng-model="formTransferData.action">
+                                    <select class="browser-default" ng-model="formTransferData.action">
                                         <option value="" disabled selected>Choose one action</option>
                                         <option value="lodgment">Lodgment</option>
                                         <option value="withdrawal">Withdrawal</option>
