Added user details card reveal page Small change to tranfer results check.

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -35,7 +35,7 @@
             <!-- Navbar goes here -->
             <nav>
                 <div class="nav-wrapper light-blue darken-3 z-depth-3">
-                    <a href="#" class="brand-logo"></a>
+                    <a href="#" class="brand-logo">Bank Service</a>
                     <ul id="nav-mobile" class="right hide-on-med-and-down">
                         <li><a href="#/logout">Logout</a></li>
                     </ul>
