Fix typo in lodgment naming

--- a/src/main/webapp/pages/main.html
+++ b/src/main/webapp/pages/main.html
@@ -82,7 +82,7 @@
                                     <label>Select Action</label>
                                     <select class="browser-default" name="selectAction" ng-model="formActionsData.action">
                                         <option value="" disabled selected>Choose one action</option>
-                                        <option value="lodgement">Lodgement</option>
+                                        <option value="lodgment">Lodgment</option>
                                         <option value="withdraw">Withdraw</option>
                                         <option value="transfer">Transfer</option>
                                     </select>
